--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="welcome_text">La musica que te gusta donde sea</string>
-    <string name="welcome_text_footer">Se parte del proyecto en platzi/sfotipay </string>
+    <string name="welcome_text_footer">Se parte del proyecto en platzi/sfotipy </string>
     <string name="title_activity_my_music">MyMusic</string>
 
     <string name="hello_world">Hello world!</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
